<resources>
    <string name="app_name">ToySwap</string>
    <string name="facebook_app_id">147281429424895</string>
    <string name="fb_login_protocol_scheme">fb147281429424895</string>
    <string name="app_title">TOY SWAP</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Enter Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot your Password?</string>
    <string name="login_registration">Don\'t Have An Account?</string>
    <string name="login_signinlog">Sign In</string>
    <string name="registration_signin"><u>Sign In</u></string>
    <string name="login">Login</string>
    <string name="registration_title">Create a new account</string>
    <string name="login_or">or Sign in with:</string>
    <string name="login_empty_emailid">Please enter Email ID!</string>
    <string name="login_empty_password">Please enter Password!</string>
    <string name="forget_password_description">Please enter the email address that will be associated to your ToySwap account.  This will be your sign in ID.</string>
    <string name="forget_email">Email</string>
    <string name="forget_password_message">Your Password has been emailed to you!</string>
    <string name="share_title">Share ITem</string>
    <string name="submit">SUBMIT</string>
    <string name="registration_firstname">First Name</string>
    <string name="registration_lastname">Last Name</string>
    <string name="registration_profileimage">Profile Image</string>
    <string name="registration_email">Email Id</string>
    <string name="registration_password">Password</string>
    <string name="registration_address">Address</string>
    <string name="registration_city">City</string>
    <string name="registration_state">State</string>
    <string name="registration_country">Country</string>
    <string name="registration_birth_date">Birth Date</string>
    <string name="registration_paidmember">Paid member</string>
    <string name="registration_freemember">Free member</string>
    <string name="registration_tag_paidmember">paid</string>
    <string name="registration_tag_freemember">free</string>
    <string name="registration_register">REGISTER</string>
    <string name="registration_empty_firstname">Please enter First Name!</string>
    <string name="registration_empty_lastname">Please enter Last Name!</string>
    <string name="registration_empty_email">Please enter Email!</string>
    <string name="registration_invalid_email">Please enter Valid Email ID!</string>
    <string name="registration_empty_password">Please enter Password!</string>
    <string name="registration_agreement_error">To continue, You must agree with the Terms and conditions!</string>
    <string name="dashboard_title">Home</string>
    <string name="dashboard_search_hint">Search Products...</string>
    <string name="no_item_available">No Items available </string>
    <string name="no_chat_available">No Chat available </string>
    <string name="remember_me">Remember me</string>
    <string name="agreeme">By signing up, you agree to our <u>Terms and Conditions</u></string>
    <string name="buy">Buy</string>
    <string name="swap">Swap</string>
    <string name="bid">Bid</string>
    <string name="sell">Sell</string>
    <string name="all">All</string>
    <string name="swapping">Swapping</string>
    <string name="bidding">Bidding</string>
    <string name="selling">Selling</string>
    <string name="filters_title">Filters</string>
    <string name="upload_item_title">Upload Toys</string>
    <string name="camera_description">What are you selling? \n This is your featured photo. Make sure it`s a good one!</string>
    <string name="categories_title">Categories</string>
    <string name="price_title">Price</string>
    <string name="agerange_title">Age Range</string>
    <string name="distance_title">Distance</string>
    <string name="search_toys_for_title">Search Toys For</string>
    <string name="posted_within_title">Posted Within</string>
    <string name="posted_within_last_one_day">Last one day</string>
    <string name="posted_within_last_7_days">Last 7 days</string>
    <string name="posted_within_last_30_days">Last 30 days</string>
    <string name="art_and_craft_toys">Art and Craft Toys</string>
    <string name="dolls">Dolls</string>
    <string name="educational_toys">Educational Toys</string>
    <string name="electronics_toys">Electronics Toys</string>
    <string name="stuff_toys">Stuff Toys</string>
    <string name="sports_toys">Sports Toys</string>
    <string name="traditional_toys">Traditional Toys</string>
    <string name="toy_vehicles">Toy Vehicles</string>
    <string name="water_toys">Water Toys</string>
    <string name="button_reset">RESET</string>
    <string name="button_apply">APPLY</string>
    <string name="report">Report</string>
    <string name="reported">REPORTED</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="sold">Sold</string>
    <string name="mark_as_sold">Mark as sold</string>
    <string name="delete">Delete</string>
    <string name="is_this_item_still_available">Is this item available?</string>
    <string name="is_the_price_negotiable">Is the Price negotiable?</string>
    <string name="what_condition_is_item_in">What condition is this Item In?</string>
    <string name="do_you_ship">Do you Ship?</string>
    <string name="less_details">Less Details</string>
    <string name="more_details">More Details</string>
    <string name="share_with">Share this Product!</string>
    <string name="message_sent">Message Sent!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites_title">Favourites</string>
    <string name="profile_title">Profile</string>
    <string name="retake">RETAKE</string>
    <string name="post">POST</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="gps_location">GPS</string>
    <string name="custom_location">Custom Location</string>
    <string name="custom_address">Custom Address</string>
    <string name="report_title">Please select one of the reasons listed below:</string>
    <string name="report_option_1">I just don\'t like it</string>
    <string name="report_option_2">It\'s not appropriate for kids</string>
    <string name="report_option_3">It\'s a scam</string>
    <string name="report_option_4">The product was already sold</string>
    <string name="report_option_5">Seller is not responding to my approach</string>
    <string name="report_option_6">It\'s a duplicate advertisement</string>
    <string name="done">DONE</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postcode">Post Code</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="item_has_been_posted">Your Item has been posted</string>
    <string name="post_another_item">Post Another Item</string>
    <string name="back">BACK</string>
    <string name="other_items">Other Items</string>
    <string name="item_details">Item Details</string>
    <string name="chats_title">Chats</string>
    <string name="type_message">Type a message</string>
    <string name="email_address">Email Address</string>
    <string name="notifications">Notification</string>
    <string name="notifications_value">20+ Notifications</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">UPDATE</string>
</resources>