<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_color"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/image_login_title"
        android:layout_width="@dimen/space_100"
        android:layout_height="@dimen/space_100"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_top_logo" />

    <TextView
        android:id="@+id/text_login_signin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_login_username"
        android:layout_below="@+id/image_login_title"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_5"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/login_signinlog"
        android:textColor="@color/appgreydark"
        android:textSize="@dimen/text_size_17"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_login_signin_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_0"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"

        android:layout_marginTop="@dimen/space_20"
        android:backgroundTint="@color/white"
        android:gravity="center|left"
        android:hint="@string/login_username"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_5"
        android:paddingTop="@dimen/space_10"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/white_grey"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:layout_marginTop="@dimen/space_20"
        android:backgroundTint="@color/white"
        android:gravity="center|left"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:maxLines="1"

        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_5"
        android:paddingTop="@dimen/space_10"
        android:textColor="@color/black"
        android:textColorHint="@color/white_grey"
        android:textSize="@dimen/text_size_16" />

    <CheckBox
        android:id="@+id/check_login_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_login_password"
        android:layout_below="@+id/edit_login_password"
        android:backgroundTint="@color/white"
        android:checked="true"
        android:text="@string/remember_me"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/button_login_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_login_remember_me"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/space_20"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_0"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/dark_blue_login"
        android:text="@string/login"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/text_login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:text="@string/login_or" />

    <LinearLayout
        android:id="@+id/linear_login_social_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_login_or"
        android:layout_above="@+id/text_login_register"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_login_facebook"
            android:layout_width="@dimen/space_50"
            android:layout_height="@dimen/space_50"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:tint="@color/white"
            android:visibility="visible"
            android:src="@drawable/icon_facebook" />

        <ImageView
            android:id="@+id/image_login_google"
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_60"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="@dimen/space_20"
            android:foregroundTint="@color/white"
            android:tint="@color/white"
            android:scaleType="fitXY"
            android:src="@drawable/icon_google_plus" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_10"
        android:text="@string/login_registration"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:text="@string/login_forgot_password"
        android:textColor="@color/white" />
</RelativeLayout>
